add datatype properites, and add missing relations